mvvm on schedule activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
     <string name="schedule_information">Schedule information</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="no_time_selected">No time selected</string>
+    <string name="select_days">Select Days:</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
 </resources>
