--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
+    <string name="launch_time">Launch Time</string>
+    <string name="app_icon">App Icon</string>
+    <string name="schedule_on">Schedule on :</string>
 </resources>
